@@ -122,6 +122,11 @@ distclean: clean
 		$(MAKE) -C $$dir distclean TOPDIR="$(TOPDIR)" APPDIR="$(APPDIR)"; \
 	done
 	@rm -f .config .context .depend
-	#@rm -f external -- User make remove the external directory manually
+	@( if [ -e external ]; then \
+		echo "********************************************************"; \
+		echo "* The external directory/link must be removed manually *"; \
+		echo "********************************************************"; \
+	   fi; \
+	) 
 
 
